# langchain-testing

./: .env.example  .gitignore  README.md  docker-compose.yml  funciones_google_sheets.ipynb  langchain_test1.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adk-agent/: main.py
adk-agent/sales_agent/: prompts.py
chatbot_gateway/: Dockerfile
chatbot_gateway/src/: main.py
chatbot_gateway/src/mapper/: waha_mapper.py
chatbot_gateway/src/routes/: chat_router.py  waha_router.py
chatbot_gateway/src/static/: index.html
langgraph-agent/: Dockerfile  README.md
langgraph-agent/src/: main.py
langgraph-agent/src/agent/: prompts.py
tests/: test_smoke.py
